php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #18783 php_domxml.c compile failures
Submitted: 2002-08-07 09:02 UTC Modified: 2002-08-07 15:51 UTC
From: mmcbride at ohsers dot org Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.2.2 OS: AIX 4.3.3
Private report: No CVE-ID: None
 [2002-08-07 09:02 UTC] mmcbride at ohsers dot org
On AIX 4.3.3 using xlc 3.6.6.6 with libxml2-2.4.23.

./configure --with-mysql=/usr/local/mysql \
                 --with-apache=$apache_install \
                 --enable-debug=no             \
                 --enable-ftp                  \
                 --enable-bcmath               \
                 --enable-track-vars=no        \
                 --with-gd=$gd_src             \
                 --with-imap=$imap_src         \
                 --with-snmp                    \
                 --with-dom                     \
                 --with-zlib                    \
                 --with-getext

I get these compilation errors:

"php_domxml.c", line 2037.1: 1506-046 (S) Syntax error.
"php_domxml.c", line 2075.9: 1506-046 (S) Syntax error.
"php_domxml.c", line 2075.12: 1506-045 (S) Undeclared identifier FIXME.
"php_domxml.c", line 2075.44: 1506-045 (S) Undeclared identifier crashes.
"php_domxml.c", line 2673.34: 1506-025 (S) Operand must be a modifiable lvalue.


Lines 2037 and 2075 seem to be caused by C++ comments in C code (xlc don't like it).

Line 2673 looks like a variable being equated to a cast!

Thanks

mark

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-08-07 13:29 UTC] jtate@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.

Thanks for the bug report.
 [2002-08-07 15:31 UTC] mmcbride at ohsers dot org
There are now more C++ comments in the code.

lines : 1381,1418,1437,1438

xlc refuses to compile.

Thanks

mark
 [2002-08-07 15:34 UTC] kalowsky@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.


 [2002-08-07 15:51 UTC] jtate@php.net
I can't find any more in CVS either in HEAD or the 4.2.0 branch.  It may take a while before the snapshots will reflect this change.  STABLE is C++ comment free.  The non stable snapshot will reflect the changes I just made in the next snapshot.  If you can't wait until then, read up on how to check out the latest version from CVS.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 04:00:02 2026 UTC