#Don't use C++ Comments bug #18783